--- a/deployment/sandbox-v2/hosts.ini
+++ b/deployment/sandbox-v2/hosts.ini
@@ -1,14 +1,14 @@
-# Inventory file with for setup with more machines in 
+# Inventory file with for setup with more machines in
 # clusters
 [console]
-console.sb ansible_user=mosipuser
+ip160.ip-144-217-96.net ansible_user=mosipuser
 
 # On public facing machine
 [nginxserver]
-console.sb ansible_user=mosipuser  
+ip160.ip-144-217-96.net ansible_user=mosipuser
 
 [nfsserver]
-console.sb ansible_user=mosipuser  
+ip160.ip-144-217-96.net ansible_user=mosipuser
 
 # Military zone (secure zone) cluster
 [mzcluster:children]
@@ -16,25 +16,24 @@ mzmaster
 mzworkers
 
 [mzmaster]
-mzmaster.sb ansible_user=root
+ip161.ip-144-217-96.net ansible_user=root
 
 [mzworkers]
-mzworker0.sb ansible_user=root
-mzworker1.sb ansible_user=root
-mzworker2.sb ansible_user=root
-mzworker3.sb ansible_user=root
-mzworker4.sb ansible_user=root
-mzworker5.sb ansible_user=root
-mzworker6.sb ansible_user=root
-mzworker7.sb ansible_user=root
-mzworker8.sb ansible_user=root
+ip162.ip-144-217-96.net ansible_user=root
+ip163.ip-144-217-96.net ansible_user=root
+ip164.ip-144-217-96.net ansible_user=root
+ip165.ip-144-217-96.net ansible_user=root
+ip166.ip-144-217-96.net ansible_user=root
+ip167.ip-144-217-96.net ansible_user=root
+ip168.ip-144-217-96.net ansible_user=root
+ip169.ip-144-217-96.net ansible_user=root
+ip170.ip-144-217-96.net ansible_user=root
 
 # De-Military zone (dmz) cluster
 [dmzcluster:children]
 dmzmaster
 dmzworkers
 [dmzmaster]
-dmzmaster.sb ansible_user=root
+ip171.ip-144-217-96.net ansible_user=root
 [dmzworkers]
-dmzworker0.sb ansible_user=root
-
+ip172.ip-144-217-96.net ansible_user=root
