--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -10,7 +10,7 @@ charts_root: '{{install_root}}/helm/charts'  # Helm charts root
 helm_cli_path: '{{user_home}}/bin'  # This path chosen as it is included in default $PATH in Centos 7.7
 artifactory_url: http://15.207.222.178
 
-sandbox_domain_name: minibox.mosip.net
+sandbox_domain_name: mosip.nuuptech.cloud
 site:
   sandbox_public_url: 'https://{{sandbox_domain_name}}'
   ssl:
@@ -26,8 +26,8 @@ docker_wait_time: 600   # Wait for docker to pull and deploy
 clusters:
   mz:
     kube_config:  "{{lookup('env', 'HOME') }}/.kube/mzcluster.config" 
-    nodeport_node: mzworker0.sb  # Any node on cluster for nodeport access
-    any_node_ip: '10.20.20.157' # ip address of above node
+    nodeport_node: ip162.ip-144-217-96.net  # Any node on cluster for nodeport access
+    any_node_ip: '144.217.96.162' # ip address of above node
     ingress:
       namespace: ingress-nginx
       nodeports:
@@ -58,8 +58,8 @@ clusters:
         url: http://kibana-kibana:5601 
   dmz:
     kube_config:  "{{lookup('env', 'HOME') }}/.kube/dmzcluster.config" 
-    nodeport_node: dmzworker0.sb  # Any node on cluster for nodeport access
-    any_node_ip: '10.20.20.207' # ip adddress of above node
+    nodeport_node: 	ip172.ip-144-217-96.net  # Any node on cluster for nodeport access
+    any_node_ip: '144.217.96.172' # ip adddress of above node
     ingress:
       namespace: ingress-nginx
       nodeports:
