--- a/deployment/sandbox-v2/hosts.ini
+++ b/deployment/sandbox-v2/hosts.ini
@@ -1,24 +1,39 @@
-# Inventory file with for setup with more machines in 
+# Inventory file with for setup with more machines in
 # clusters
 [console]
-console.sb ansible_user=mosipuser ansible_host=10.20.20.10
+ip160.ip-144-217-96.net ansible_user=mosipuser
+
+# On public facing machine
+[nginxserver]
+ip160.ip-144-217-96.net ansible_user=mosipuser
+
+[nfsserver]
+ip160.ip-144-217-96.net ansible_user=mosipuser
 
 # Military zone (secure zone) cluster
+[mzcluster:children]
+mzmaster
+mzworkers
+
 [mzmaster]
-mzmaster.sb ansible_user=root ansible_host=10.20.20.99
+ip161.ip-144-217-96.net ansible_user=root
+
 [mzworkers]
-mzworker0.sb ansible_user=root ansible_host=10.20.20.100
-mzworker1.sb ansible_user=root ansible_host=10.20.20.101
-mzworker2.sb ansible_user=root ansible_host=10.20.20.102
-mzworker3.sb ansible_user=root ansible_host=10.20.20.103
-mzworker4.sb ansible_user=root ansible_host=10.20.20.104
-mzworker5.sb ansible_user=root ansible_host=10.20.20.105
-mzworker6.sb ansible_user=root ansible_host=10.20.20.106
-mzworker7.sb ansible_user=root ansible_host=10.20.20.107
-mzworker8.sb ansible_user=root ansible_host=10.20.20.108
+ip162.ip-144-217-96.net ansible_user=root
+ip163.ip-144-217-96.net ansible_user=root
+ip164.ip-144-217-96.net ansible_user=root
+ip165.ip-144-217-96.net ansible_user=root
+ip166.ip-144-217-96.net ansible_user=root
+ip167.ip-144-217-96.net ansible_user=root
+ip168.ip-144-217-96.net ansible_user=root
+ip169.ip-144-217-96.net ansible_user=root
+ip170.ip-144-217-96.net ansible_user=root
 
 # De-Military zone (dmz) cluster
+[dmzcluster:children]
+dmzmaster
+dmzworkers
 [dmzmaster]
-dmzmaster.sb ansible_user=root ansible_host=10.20.20.199
+ip171.ip-144-217-96.net ansible_user=root
 [dmzworkers]
-dmzworker0.sb ansible_user=root ansible_host=10.20.20.200
+ip172.ip-144-217-96.net ansible_user=root
