--- a/deployment/sandbox-v2/hosts.ini
+++ b/deployment/sandbox-v2/hosts.ini
@@ -1,14 +1,14 @@
 # Inventory file with for setup with more machines in
 # clusters
 [console]
-ip160.ip-144-217-96.net ansible_user=mosipuser
+ip160.ip-144-217-96.net ansible_user=mosipuser ansible_host=10.20.20.10
 
 # On public facing machine
 [nginxserver]
-ip160.ip-144-217-96.net ansible_user=mosipuser
+ip160.ip-144-217-96.net ansible_user=mosipuser ansible_host=144.217.96.160
 
 [nfsserver]
-ip160.ip-144-217-96.net ansible_user=mosipuser
+ip160.ip-144-217-96.net ansible_user=mosipuser ansible_host=144.217.96.160
 
 # Military zone (secure zone) cluster
 [mzcluster:children]
@@ -16,24 +16,24 @@ mzmaster
 mzworkers
 
 [mzmaster]
-ip161.ip-144-217-96.net ansible_user=root
+ip161.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.161
 
 [mzworkers]
-ip162.ip-144-217-96.net ansible_user=root
-ip163.ip-144-217-96.net ansible_user=root
-ip164.ip-144-217-96.net ansible_user=root
-ip165.ip-144-217-96.net ansible_user=root
-ip166.ip-144-217-96.net ansible_user=root
-ip167.ip-144-217-96.net ansible_user=root
-ip168.ip-144-217-96.net ansible_user=root
-ip169.ip-144-217-96.net ansible_user=root
-ip170.ip-144-217-96.net ansible_user=root
+ip162.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.162
+ip163.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.163
+ip164.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.164
+ip165.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.165
+ip166.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.166
+ip167.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.167
+ip168.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.168
+ip169.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.169
+ip170.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.170
 
 # De-Military zone (dmz) cluster
 [dmzcluster:children]
 dmzmaster
 dmzworkers
 [dmzmaster]
-ip171.ip-144-217-96.net ansible_user=root
+ip171.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.171
 [dmzworkers]
-ip172.ip-144-217-96.net ansible_user=root
+ip172.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.172
