--- a/deployment/sandbox-v2/hosts.ini
+++ b/deployment/sandbox-v2/hosts.ini
@@ -1,24 +1,24 @@
 # Inventory file with for setup with more machines in 
 # clusters
 [console]
-ip160.ip-144-217-96.net ansible_user=mosipuser ansible_host=144.217.96.160
+console.sb ansible_user=mosipuser ansible_host=10.10.20.7
 
 # Military zone (secure zone) cluster
 [mzmaster]
-ip161.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.161
+mzmaster.sb ansible_user=root ansible_host=10.10.20.6
 [mzworkers]
-ip162.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.162
-ip163.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.163
-ip164.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.164
-ip165.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.165
-ip166.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.166
-ip167.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.167
-ip168.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.168
-ip169.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.169
-ip170.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.170
+mzworker0.sb ansible_user=root ansible_host=10.10.20.8
+mzworker1.sb ansible_user=root ansible_host=10.10.20.9
+mzworker2.sb ansible_user=root ansible_host=10.10.20.10
+mzworker3.sb ansible_user=root ansible_host=10.10.20.11
+mzworker4.sb ansible_user=root ansible_host=10.10.20.12
+mzworker5.sb ansible_user=root ansible_host=10.10.20.13
+mzworker6.sb ansible_user=root ansible_host=10.10.20.14
+mzworker7.sb ansible_user=root ansible_host=10.10.20.16
+mzworker8.sb ansible_user=root ansible_host=10.10.20.15
 
 # De-Military zone (dmz) cluster
 [dmzmaster]
-ip171.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.171
+dmzmaster.sb ansible_user=root ansible_host=10.10.20.17
 [dmzworkers]
-ip172.ip-144-217-96.net ansible_user=root ansible_host=144.217.96.172
+dmzworker0.sb ansible_user=root ansible_host=10.10.20.18
